versioned_docs/version-5.0/client-api/configuration/content/_serialization-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

## CustomizeJsonSerializer

If you need to modify `JsonSerializer` object used by the client when sending entities to the server you can register a customization action:

<TabItem value="customize_json_serializer" label="customize_json_serializer">
<CodeBlock language="csharp">
{`Serialization = new NewtonsoftJsonSerializationConventions
\{
    CustomizeJsonSerializer = serializer => throw new CodeOmitted()
\}
`}
</CodeBlock>
</TabItem>

## CustomizeJsonDeserializer

To modify the `JsonSerializer` object used by the client to deserialize entities loaded from the server, you can register a customization action:

<TabItem value="customize_json_deserializer" label="customize_json_deserializer">
<CodeBlock language="csharp">
{`Serialization = new NewtonsoftJsonSerializationConventions
\{
    CustomizeJsonDeserializer = serializer => throw new CodeOmitted()
\}
`}
</CodeBlock>
</TabItem>

## DeserializeEntityFromBlittable

In order to customize the entity deserialization from blittable JSON you can use define `DeserializeEntityFromBlittable` implementation:

<TabItem value="DeserializeEntityFromBlittable" label="DeserializeEntityFromBlittable">
<CodeBlock language="csharp">
{`Serialization = new NewtonsoftJsonSerializationConventions
\{
    DeserializeEntityFromBlittable = (type, blittable) => throw new CodeOmitted()
\}
`}
</CodeBlock>
</TabItem>

## JsonContractResolver

The default `JsonContractResolver` used by RavenDB will serialize all properties and all public fields. You can change it by providing own implementation of `IContractResolver` interface:

<TabItem value="json_contract_resolver" label="json_contract_resolver">
<CodeBlock language="csharp">
{`Serialization = new NewtonsoftJsonSerializationConventions
\{
    JsonContractResolver = new CustomJsonContractResolver()
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="custom_json_contract_resolver" label="custom_json_contract_resolver">
<CodeBlock language="csharp">
{`public class CustomJsonContractResolver : IContractResolver
\{
    public JsonContract ResolveContract(Type type)
    \{
        throw new CodeOmitted();
    \}
\}
`}
</CodeBlock>
</TabItem>

You can also customize behavior of the default resolver by inheriting from `DefaultRavenContractResolver` and overriding specific methods.

<TabItem value="custom_json_contract_resolver_based_on_default" label="custom_json_contract_resolver_based_on_default">
<CodeBlock language="csharp">
{`public class CustomizedRavenJsonContractResolver : DefaultRavenContractResolver
\{
    public CustomizedRavenJsonContractResolver(ISerializationConventions conventions) : base(conventions)
    \{
    \}

    protected override JsonProperty CreateProperty(MemberInfo member, MemberSerialization memberSerialization)
    \{
        throw new CodeOmitted();
    \}
\}
`}
</CodeBlock>
</TabItem>

## PreserveDocumentPropertiesNotFoundOnModel

Controls whatever properties that were not de-serialized to an object properties will be preserved 
during saving a document again. If `false`, those properties will be removed when the document will be saved. Default: `true`.

<TabItem value="preserve_doc_props_not_found_on_model" label="preserve_doc_props_not_found_on_model">
<CodeBlock language="csharp">
{`PreserveDocumentPropertiesNotFoundOnModel = true
`}
</CodeBlock>
</TabItem>

## BulkInsert.TrySerializeEntityToJsonStream

For the bulk insert you can configure custom serialization implementation by providing `TrySerializeEntityToJsonStream`:

<TabItem value="TrySerializeEntityToJsonStream" label="TrySerializeEntityToJsonStream">
<CodeBlock language="csharp">
{`BulkInsert =
\{
    TrySerializeEntityToJsonStream = (entity, metadata, writer) => throw new CodeOmitted(),
\}
`}
</CodeBlock>
</TabItem>

## Numbers (de)serialization

RavenDB client supports out of the box all common numeric value types: `int`, `long`, `double`, `decimal` etc.  
Note that although the (de)serialization of `decimals` is fully supported, there are [server side limitations](../../../server/kb/numbers-in-ravendb.mdx) to numbers in that range.  
Other number types like `BigInteger` must be treated using custom (de)serialization.

## IgnoreByRefMembers and IgnoreUnsafeMembers

By default, if you try to store an entity that has `ref` or unsafe members, the 
Client will throw an exception when [`session.SaveChanges()` is called](../../../client-api/session/saving-changes.mdx).  

If `IgnoreByRefMembers` is set to `true` and you try to store an entity that has 
`ref` members, those members will simply be ignored. The entity will be uploaded 
to the server with all non-`ref` members without throwing an exception. The 
document structure on the server-side will not contain fields for those `ref` 
members.  

If `IgnoreUnsafeMembers` is set to `true`, all pointer members will be ignored 
in the same manner.  

The default value of both these conventions is `false`.  


